objects/Requirement_Artifact__c.object
<CustomObject>
    <description>It is a junction object which establishes many to many relationship between artifacts and requirement.</description>
    <fields>
        <fullName>Action_Type__c</fullName>
        <formula>Action__r.RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Action Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Action__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>It consists of the actions being affected by the requirement.</description>
        <label>Action</label>
        <referenceTo>Action__c</referenceTo>
        <relationshipLabel>Requirement</relationshipLabel>
        <relationshipName>Requirement_Artifacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approval_Process__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>It consists of the approval process being affected by the requirement.</description>
        <label>Approval Process</label>
        <referenceTo>Approval_Process__c</referenceTo>
        <relationshipLabel>Requirement</relationshipLabel>
        <relationshipName>Requirement_Artifacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approval_Step__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>It consists of the approval step being affected by the requirement.</description>
        <label>Approval Step</label>
        <referenceTo>Approval_Step__c</referenceTo>
        <relationshipLabel>Requirement</relationshipLabel>
        <relationshipName>Requirement_Artifacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Change_Description__c</fullName>
        <description>Changes taken place in the artifact due to requirement.</description>
        <label>Change Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Changed_By__c</fullName>
        <description>Who has made the modification in the component</description>
        <label>Changed By</label>
        <picklist>
            <picklistValues>
                <fullName>Nitesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deep</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Controller__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>It consists of the controller being affected by the requirement.</description>
        <label>Controller</label>
        <referenceTo>Controller__c</referenceTo>
        <relationshipLabel>Requirement</relationshipLabel>
        <relationshipName>Requirement_Artifacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Object__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>It consists of the object being affected by the requirement.</description>
        <label>Object</label>
        <referenceTo>Object__c</referenceTo>
        <relationshipLabel>Requirement</relationshipLabel>
        <relationshipName>Requirement_Artifacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Requirement_Type__c</fullName>
        <formula>Requirement__r.RecordType.DeveloperName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Requirement Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requirement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>It captures the requirement affecting artifacts.</description>
        <label>Requirement</label>
        <referenceTo>Requirement__c</referenceTo>
        <relationshipLabel>Requirement Artifacts</relationshipLabel>
        <relationshipName>Requirement_Artifacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Trigger__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>It consists of the trigger being affected by the requirement.</description>
        <label>Trigger</label>
        <referenceTo>Trigger__c</referenceTo>
        <relationshipLabel>Requirement</relationshipLabel>
        <relationshipName>Requirement_Artifacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Validation_Rule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>It consists of the validation rule being affected by the requirement.</description>
        <label>Validation Rule</label>
        <referenceTo>Validation_Rule__c</referenceTo>
        <relationshipLabel>Requirement</relationshipLabel>
        <relationshipName>Requirement_Artifacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Visualforce_Page__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>It consists of the vf page being affected by the requirement.</description>
        <label>Visualforce Page</label>
        <referenceTo>Visualforce_Page__c</referenceTo>
        <relationshipLabel>Requirement</relationshipLabel>
        <relationshipName>Requirement_Artifacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Workflow_Rule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>It consists of the workflow rule being affected by the requirement.</description>
        <label>Workflow Rule</label>
        <referenceTo>Workflow_Rule__c</referenceTo>
        <relationshipLabel>Requirement</relationshipLabel>
        <relationshipName>Requirement_Artifacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Requirement Artifact</label>
    <nameField>
        <displayFormat>RA-{0000}</displayFormat>
        <label>Requirement Artifact Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Requirement Artifacts</pluralLabel>
    <recordTypes>
        <fullName>Requirement_affecting_Action</fullName>
        <active>true</active>
        <label>Requirement affecting Action</label>
    </recordTypes>
    <recordTypes>
        <fullName>Requirement_affecting_Approval_Process</fullName>
        <active>true</active>
        <label>Requirement affecting Approval Process</label>
    </recordTypes>
    <recordTypes>
        <fullName>Requirement_affecting_Approval_Step</fullName>
        <active>true</active>
        <label>Requirement affecting Approval Step</label>
    </recordTypes>
    <recordTypes>
        <fullName>Requirement_affecting_Controller</fullName>
        <active>true</active>
        <label>Requirement affecting Controller</label>
    </recordTypes>
    <recordTypes>
        <fullName>Requirement_affecting_Object</fullName>
        <active>true</active>
        <label>Requirement affecting Object</label>
    </recordTypes>
    <recordTypes>
        <fullName>Requirement_affecting_Trigger</fullName>
        <active>true</active>
        <label>Requirement affecting Trigger</label>
    </recordTypes>
    <recordTypes>
        <fullName>Requirement_affecting_Validation_Rule</fullName>
        <active>true</active>
        <label>Requirement affecting Validation Rule</label>
    </recordTypes>
    <recordTypes>
        <fullName>Requirement_affecting_Visualforce_Page</fullName>
        <active>true</active>
        <label>Requirement affecting Visualforce Page</label>
    </recordTypes>
    <recordTypes>
        <fullName>Requirement_affecting_Workflow_Rule</fullName>
        <active>true</active>
        <label>Requirement affecting Workflow Rule</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>